--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
     targetSdkVersion 29
     versionCode 187
     versionName "1.8.8"
+    multiDexEnabled true
+
   }
   buildTypes {
     release {
@@ -24,4 +26,6 @@ dependencies {
   implementation project(':rtplibrary')
   implementation 'com.google.android.material:material:1.2.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+  implementation "androidx.core:core-ktx:1.3.1"
 }
