--- a/rtmp/build.gradle
+++ b/rtmp/build.gradle
@@ -20,4 +20,7 @@ android {
 
 dependencies {
   api 'androidx.annotation:annotation:1.1.0'
+  api project(':encoder')
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+  implementation "androidx.core:core-ktx:1.3.1"
 }
