--- a/rtplibrary/build.gradle
+++ b/rtplibrary/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 group = 'com.github.pedroSG94'
 
 android {
@@ -10,6 +12,8 @@ android {
     targetSdkVersion 29
     versionCode 188
     versionName "1.8.8"
+    multiDexEnabled true
+
   }
   buildTypes {
     release {
@@ -17,10 +21,26 @@ android {
       consumerProguardFiles 'proguard-rules.pro'
     }
   }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 }
 
 dependencies {
   api project(':encoder')
   api project(':rtmp')
   api project(':rtsp')
+  implementation 'com.amazonaws:aws-android-sdk-core:2.16.9'
+  implementation 'com.amazonaws:aws-android-sdk-s3:2.16.9'
+  implementation 'com.amazonaws:aws-android-sdk-s3:2.16.9'
+  implementation('com.amazonaws:aws-android-sdk-mobile-client:2.16.9') { transitive = true }
+  implementation('com.amazonaws:aws-android-sdk-auth-userpools:2.16.9') { transitive = true }
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+  implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+  implementation  "io.reactivex.rxjava3:rxandroid:3.0.0"
+  implementation "io.reactivex.rxjava3:rxjava:3.0.4"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+  implementation "androidx.core:core-ktx:1.3.1"
 }
