--- a/rtsp/build.gradle
+++ b/rtsp/build.gradle
@@ -19,4 +19,7 @@ android {
   }
 }
 
-dependencies {}
+dependencies {
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
+  implementation "androidx.core:core-ktx:1.3.1"
+}
